--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,45 +1,6 @@
 @CHARSET "UTF-8";
 
 /*******************************************************************************
-MeyerWeb Reset
-*******************************************************************************/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/*******************************************************************************
 Theme Styles
 *******************************************************************************/
 body {
@@ -50,50 +11,11 @@ body {
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
-  text-align:center;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  margin: 10px 0;
-  font-weight: 700;
-  color:#222222;
-  font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
-  letter-spacing: -1px;
-}
-
-h1 {
-  font-size: 36px;
-  font-weight: 700;
-}
-
-h2 {
-  padding-bottom: 10px;
-  font-size: 32px;
-  background: url('../images/bg_hr.png') repeat-x bottom;
-}
-
-h3 {
-  font-size: 24px;
-}
-
-h4 {
-  font-size: 21px;
-}
-
-h5 {
-  font-size: 18px;
-}
-
-h6 {
-  font-size: 16px;
-}
-
-p {
-  margin: 10px 0 15px 0;
 }
 
 footer p {
   color: #f2f2f2;
+  text-align:center;
 }
 
 a {
@@ -115,41 +37,6 @@ a {
 
 a:hover, a:focus {text-decoration: underline;}
 
-footer a {
-  color: #F2F2F2;
-  text-decoration: underline;
-}
-
-img {
-  position: relative;
-  margin: 0 auto;
-  max-width: 739px;
-  padding: 5px;
-  margin: 10px 0 10px 0;
-  border: 1px solid #ebebeb;
-
-  box-shadow: 0 0 5px #ebebeb;
-  -webkit-box-shadow: 0 0 5px #ebebeb;
-  -moz-box-shadow: 0 0 5px #ebebeb;
-  -o-box-shadow: 0 0 5px #ebebeb;
-  -ms-box-shadow: 0 0 5px #ebebeb;
-}
-
-p img {
-  display: inline;
-  margin: 0;
-  padding: 0;
-  vertical-align: middle;
-  text-align: center;
-  border: none;
-}
-
-table {
-  border: 1px solid #373737;
-  margin-bottom: 20px;
-  text-align: left;
-}
-
 /*******************************************************************************
 Full-Width Styles
 *******************************************************************************/
@@ -165,11 +52,105 @@ Full-Width Styles
   margin: 0 auto;
 }
 
+#header {
+  background: #333;	
+  height: 80px;
+}
+#header p {
+  color: #f2f2f2;
+  	
+}
+#header_words {
+  position:absolute;
+  left:100px;
+}
+#header_tel {
+  position:absolute;
+  right:100px;
+}
+
+#logo_img　{
+  position:absolute;
+  left:100px;	
+}
+#logo_words {
+  position:absolute;
+  left:220px;
+}
+#logo_tel {
+  position:absolute;
+  right:100px;
+}
+
 #header_bar {
-  background: #212121;
-  background: -moz-linear-gradient(top, #373737, #212121);
-  background: -webkit-linear-gradient(top, #373737, #212121);
-  background: -ms-linear-gradient(top, #373737, #212121);
-  background: -o-linear-gradient(top, #373737, #212121);
-  background: linear-gradient(top, #373737, #212121);
+  
+}
+
+.introduction_link {
+  width: 160px;
+  height:70px;
+  position:absolute;
+  left:0px;
+}
+.dynamics_link {
+  width: 160px;
+  height:70px;
+  position:absolute;
+  left:160px;
+}
+.show_link {
+  width: 160px;
+  height:70px;
+  position:absolute;
+  left:320px;
+}
+.join_link {
+  width: 160px;
+  height:70px;
+  position:absolute;
+  left:480px;
+}
+.about_link {
+  width: 160px;
+  height:70px;
+  position:absolute;
+  left:640px;
+}
+.contact_link {
+  width: 160px;
+  height:70px;
+  position:absolute;
+  left:800px;
+}
+
+#main_content_wrap {
+  background: #f2f2f2;
+  border-top: 1px solid #111;
+  border-bottom: 1px solid #111;
+}
+
+#main_content——display {
+  padding-top: 40px;
+}
+
+#main_content——shop {
+  padding-top: 40px;
+}
+
+#footer_wrap {
+  background: #333;
+}
+#footer_logo {
+  position:absolute;
+  left:0px;
+}
+
+/*******************************************************************************
+sub page Styles
+*******************************************************************************/
+#dynamics_content {
+  text-align:center;
+}
+#introduction_content p{
+  text-align:center;
 }
