--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -150,6 +150,11 @@ Full-Width Styles
 /*******************************************************************************
 sub page Styles
 *******************************************************************************/
+#introduction_content {
+	  height:auto!important;
+    min-height:500px; 
+}
+
 #dynamics_content {
   text-align:center;
 }
